fix service list view overlap on calendar view problem

--- a/src/modules/scheduling/css/scheduling.scss
+++ b/src/modules/scheduling/css/scheduling.scss
@@ -111,6 +111,14 @@
             .services-list{
                 width: 100%;
                 margin-top: 30px;
+
+
+                .services-list-show{
+                    display: block;
+                }
+                .services-list-hide{
+                    display: none;
+                }
             }
            
 
